fix box-wrap style

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@ body {
 #root {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 body,input,select,option,textarea {
@@ -209,6 +211,7 @@ h1 {
   height: 100%;
   overflow: hidden;
   overflow-y: auto;
+  width: 100%;
 }
 
 /* E layouts */
